--- a/style.css
+++ b/style.css
@@ -54,9 +54,9 @@ img
 iframe
 {
     max-width: 300px;
-    max-height: 300px;
+    max-height: auto;
     width: 300px;
-    height: 300px;
+    height: auto;
 }
 .rotate180
 {
