fixed image and iframe errors

--- a/style.css
+++ b/style.css
@@ -47,9 +47,9 @@ li
 img
 {
     max-width: 300px;
-    max-height: auto;
+    max-height: 300px;
     width: 300px;
-    height: auto;
+    height: 300px;
 }
 iframe
 {
