--- a/style.css
+++ b/style.css
@@ -9,6 +9,12 @@ nav
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: white;
 }
+ul
+{
+    margin: 0 auto;
+    width: 100%;
+    text-align: center;
+}
 h1
 {
     font-family: Georgia, 'Times New Roman', Times, serif;
