--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ nav
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: white;
 }
-ul
+ol
 {
     margin: 0 auto;
     width: 100%;
