--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ ol
     margin: 0 auto;
     width: 100%;
     text-align: center;
+    padding-top: 1%;
+    padding-bottom: 1%;
 }
 ul
 {
@@ -23,6 +25,12 @@ ul
 {
     display: inline-block;
     list-style-type: none;
+}
+li
+{
+    display: inline;
+    margin: 0% 10.5%;
+    font-size: large;
 }
 h1
 {
