--- a/style.css
+++ b/style.css
@@ -2,12 +2,14 @@ body
 {
     font-family: Arial, Helvetica, sans-serif;
     color: white;
-    background-color: green;
+    background-color: lightgreen;
+    text-align: center;
 }
 nav
 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: white;
+    text-align: center;
 }
 ol
 {
@@ -19,7 +21,7 @@ ol
 }
 ul
 {
-    text-align: left;
+    text-align: center;
 }
 #nav ol
 {
@@ -36,36 +38,43 @@ h1
 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: white;
+    text-align: center;
 }
 h2
 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: white;
+    text-align: center;
 }
 h3
 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: white;
+    text-align: center;
 }
 h4
 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: white;
+    text-align: center;
 }
 p
 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: white;
+    text-align: center;
 }
 ul
 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: white;
+    text-align: center;
 }
 li
 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: white;
+    text-emphasis: center;
 }
 img
 {
