--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ p
 ul
 {
     font-family: Georgia, 'Times New Roman', Times, serif;
-    color: darkgreen;
+    color: black;
     text-align: center;
 }
 ol
@@ -68,13 +68,6 @@ li
     display: inline;
     margin: 0% 10.5%;
     font-size: large;
-}
-picture
-{
-    width: auto;
-    border: .2em solid black;
-    padding: .2em;
-    border-radius: .6em;
 }
 img
 {
