--- a/style.css
+++ b/style.css
@@ -11,10 +11,29 @@ nav
     color: darkorange;
     text-align: center;
 }
-#nav ol
+#nav-bar ol
 {
     display: inline-block;
     list-style-type: none;
+    margin: 0 auto;
+    width: 100%;
+    text-align: center;
+    padding-top: 1%;
+    padding-bottom: 1%;
+}
+#nav-bar li 
+{
+    display: inline;
+    padding: 1em;
+}
+#nav-bar li:hover
+{
+    background-color: white;
+}
+#nav-bar a
+{
+    color: darkorange;
+    text-decoration: none;
 }
 h1
 {
@@ -52,20 +71,12 @@ ul
     color: black;
     text-align: center;
 }
-ol
-{
-    margin: 0 auto;
-    width: 100%;
-    text-align: center;
-    padding-top: 1%;
-    padding-bottom: 1%;
-}
 li
 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     color:black;
     text-emphasis: center;
-    display: inline;
+    list-style-type: none;
     margin: 0% 10.5%;
     font-size: large;
 }
