--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body
 nav
 {
     font-family: Georgia, 'Times New Roman', Times, serif;
-    color: darkorange;
+    color: black;
     text-align: center;
 }
 #nav-bar ol
@@ -32,7 +32,7 @@ nav
 }
 #nav-bar a
 {
-    color: darkorange;
+    color: black;
     text-decoration: none;
 }
 h1
