fixed error on line 78

--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ li
 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     color:black;
-    text-emphasis: center;
+    text-emphasis: black;
     list-style-type: none;
     margin: 0% 10.5%;
     font-size: large;
